Update paging logic
